Refactor update-multiple API
