# backend/models/index.js
@@ -1,5 +1,6 @@
 module.exports = {
   Manga: require("./Manga"),
+  MangaUpdateSummary: require("./MangaUpdateSummary"),
   User: require("./User"),
   Subscription: require("./Subscription"),
   ApplicationMeta: require("./ApplicationMeta"),
